fix layout bugs v6

--- a/src/scss/_base/_mixins.scss
+++ b/src/scss/_base/_mixins.scss
@@ -56,6 +56,7 @@
   font-size: 30px;
   line-height: 32px;
   font-weight: 700;
+  letter-spacing: normal;
 
   @include minScreen(1440px) {
     font-size: 45px;
